# practicum10.2

./: README.md  main.py  pyproject.toml
src/: utils.py
tests/: test_utils.py
